--- a/www/css/style.css
+++ b/www/css/style.css
@@ -681,6 +681,9 @@ dialog {
   padding: 0;
   max-width: 100vw;
 }
+body:has(dialog.policyModal--content[open]) {
+  overflow: hidden;
+}
 .policyModal--content {
   margin: 0;
   height: 100%;
